2020-12-12  Dmitry V. Levin  <ldv@altlinux.org>

	* ar.c (write_member, do_oper_insert): Fix spelling typo in comment.
	* elfclassify.c (issue, elf_issue, is_unstripped): Likewise.
	* elfcompress.c (process_file): Likewise.
	* elflint.c (be_quiet, check_gnu_hash): Likewise.
	* readelf.c (print_phdr, handle_gnu_hash,
	dwarf_locexpr_opcode_string): Likewise.
	* size.c (totals_class): Likewise.
	* strings.c (read_elf): Likewise.
	* strip.c (handle_elf): Likewise.

	* readelf.c (print_debug_addr_section): Fix spelling typo in error
	diagnostics.
	* strip.c (options): Fix spelling typos in argp help text.
	* strings.c (options): Likewise.
	* stack.c (options): Likewise.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* unstrip.c (make_directories): Use ACCESSPERMS for mkdir.
	(handle_file): Use DEFFILEMODE for open with O_CREAT for ET_REL
	files, ACCESSPERMS otherwise.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* Makefile.am (nm_LDADD): Add obstack_LIBS.
	(ranlib_LDADD): Likewise.
	(ar_LDADD): Likewise.

2020-10-27  Érico N. Rolim  <erico.erc@gmail.com>

	* unstrip.c (make_directories): Use strndup, not strndupa.

2020-09-28  Mark Wielaard  <mark@klomp.org>

	* readelf.c (next_listptr_offset): Take idx as pointer, to be updated
	and use new Dwarf_Off as offset to match.
	(listptr_attr): New function.
	(print_debug_loclists_section): Check for DW_AT_GNU_locviews to show
	view pairs.
	(print_debug_loc_section): Adjust next_listptr_offset call.

2020-09-03  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_cfa_program): Take ehdr as argument. Use it to
	recognize DW_CFA_AARCH64_negate_ra_state.
	(print_debug_frame_section): Pass ehdr to print_cfa_program.
	(print_debug): Don't warn if we dump frames, but cannot get dbg.

2020-09-01  Mark Wielaard  <mark@klomp.org>

	* readelf.c (print_debug_ranges_section): Base address entry can
	be first.
	(print_debug_loc_section): Likewise.

2020-09-04  Mark Wielaard  <mark@klomp.org>
